# strands-mcp

./: .env.example  .gitignore  AMAZON_Q_INTEGRATION.md  Dockerfile.elasticsearch  FASTMCP_DEPLOYMENT.md  MULTIAGENT_SETUP.md  RAILWAY_DEPLOYMENT.md  README-MONOREPO.md  README.md  UV_MIGRATION.md  WINDSURF_INTEGRATION.md  docker-compose.uv.yml  docker-compose.yml  multiagent_bedrock_example.py  pyproject.toml  railway.toml  requirements.txt  requirements_multiagent.txt  run_standalone.py  run_standalone_uv.py  scraper-railway.toml  start-uv.sh  start.ps1  start.sh  test_fastmcp.py  test_mcp_tools.py  test_setup.py  windsurf-mcp-config.json
docker/: docker-compose.yml
elasticsearch/: Dockerfile  railway.json
mcp_server/: Dockerfile  Dockerfile.uv  fastmcp_server.py  main.py  railway.json
scraper/: Dockerfile  Dockerfile.uv  README.md  main.py  railway.json  test_documents.py  test_indexing.py
