[project]
name = "strands-mcp"
version = "0.1.0"
description = "MCP server that scrapes Strands Agents documentation and indexes it in Elasticsearch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.13.0",
    "lxml>=5.0.0",
    "elasticsearch>=8.15.0",
    "mcp>=1.12.0",
    "pydantic>=2.11.0",
    "aiohttp>=3.12.0",
    "asyncio-throttle>=1.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.7.0",
    "playwright>=1.48.0",
]

[project.scripts]
scraper = "scraper.main:main"
mcp-server = "mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper", "mcp_server"]

[tool.uv]
dev-dependencies = []
