[project]
name = "strands-mcp"
version = "0.1.0"
description = "MCP server that scrapes Strands Agents documentation and indexes it in Elasticsearch"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Strands MCP Team"}
]
license = {text = "MIT"}
keywords = ["mcp", "elasticsearch", "documentation", "scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests==2.32.4",
    "beautifulsoup4==4.13.4",
    "lxml==6.0.0",
    "elasticsearch==8.15.1",
    "mcp==1.9.4",
    "pydantic==2.11.0",
    "structlog==24.1.0",
    "aiohttp==3.12.15",
    "beautifulsoup4==4.13.4",
    "lxml==6.0.0",
    "playwright==1.40.0",
    "tenacity==9.1.2",
    "python-dotenv==1.1.1",
    "fastmcp==2.9.2",
    "uvicorn==0.35.0",
    "fastapi==0.115.6",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.23.4",
    "pytest-playwright==0.7.0",
    "playwright==1.40.0",
]
multiagent = [
    "strands-agents>=1.1.0",
    "strands-agents-tools>=0.2.1",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[project.scripts]
scraper = "scraper.main:main"
mcp-server = "mcp_server.main:main"
fastmcp-server = "mcp_server.fastmcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper", "mcp_server"]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.23.4",
    "pytest-playwright==0.7.0",
    "playwright==1.40.0",
]

[tool.uv.sources]
